--- a/www/lib/onsen/css/onsen-css-components.css
+++ b/www/lib/onsen/css/onsen-css-components.css
@@ -1857,7 +1857,7 @@ h6 {
   height: 19px;
   -webkit-border-radius: 19px;
   border-radius: 19px;
-  background-color: #dc5236;
+  background-color: #2b8f1d;
   color: #fff;
   text-align: center;
   font-size: 16px;
